[package]
name = "boiler-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
uuid = { version = "1.2.1", features = [ "v4" ] }

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=/bin/mold"]