[package]
name = "jwt_boiler"
version = "0.1.1"
edition = "2021"
description = "Boilerplate for jwt signing and decrypting."
license = "MIT"
keywords = ["jwt", "api", "token"]
authors = ["Joshua Enokson <enoksonprojects@protonmail.com>"]
repository = "https://github.com/enokson/jwt-boiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.6"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
serde_json = "1.0.87"
sha2 = "0.10.6"
thiserror = "1.0.38"
uuid = { version = "1.2.1", features = [ "v4" ] }

# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "link-arg=-fuse-ld=/bin/mold"]